# Market-Data-Handler

./: CMakeLists.txt  HOW_TO_RUN.md  README.md  demo.cpp  hft_demo  run_terminal_kill.sh  ws_server.py
include/core/: lock_free_queue.hpp  market_data_types.hpp
include/feed_handler/: order_book.hpp
include/protocols/: fix_parser.hpp
scripts/: build.sh
src/: main.cpp
src/analytics/: latency_tracker.cpp  market_metrics.cpp
src/benchmark/: latency_benchmark.cpp  throughput_benchmark.cpp
src/core/: lock_free_queue.cpp  market_data_types.cpp  memory_pool.cpp  simd_operations.cpp
src/feed_handler/: feed_processor.cpp  order_book.cpp
src/protocols/: binary_parser.cpp  fix_parser.cpp
src/server/: simple_server.cpp  websocket_server.cpp  ws_server.cpp
src/simulator/: data_generator.cpp  market_simulator.cpp
tests/: CMakeLists.txt  test_lock_free_queue.cpp
web/: README.md  package.json
web/public/: index.html
web/src/: App.css  App.tsx  MarketData3D.tsx  SimpleApp.tsx  index.tsx
